--- a/movies/pubspec.yaml
+++ b/movies/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  bloc_test: ^9.0.3
   build_runner: ^2.1.11
   cached_network_image: ^3.2.1
   cupertino_icons: ^1.0.5
