--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,13 @@ dependencies:
   firebase_core: ^1.19.1
   firebase_crashlytics: ^2.8.4
 
+
 dev_dependencies:
   mockito: ^5.0.8
   build_runner: ^2.0.4
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.0.3-nullsafety.0
   
 
 # For information on the generic Dart part of this file, see the
